<?xml version="1.0" encoding="UTF-8"?>

    <androidx.constraintlayout.widget.ConstraintLayout tools:context=".fragements.IntroFragment" android:layout_height="match_parent" android:layout_width="match_parent" xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- TODO: Update blank fragment layout -->


    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    -<LinearLayout android:layout_height="match_parent" android:layout_width="match_parent" android:orientation="vertical">

    <TextView
        android:id="@+id/intro_tile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text="@string/intro_title"
        android:textAlignment="center"
        android:textColor="#30BDCF"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/intro_text"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="sans-serif"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:text="@string/intro_text"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <EditText
        android:id="@+id/intro_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/intro_amount"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="12sp" />

    <Button
        android:id="@+id/intro_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intro_done" />

</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>