<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragements.UpdateFragment">

    <!-- TODO: Update blank fragment layout -->


    <EditText
        android:id="@+id/updateeditTextTexttitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="92dp"
        android:ems="10"
        android:hint="Title"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/updateeditTextdescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="82dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="119dp"
        android:layout_marginBottom="496dp"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="Detail"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTexttitle" />

    <TextView
        android:id="@+id/status_text"
        android:layout_width="296dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="25dp"
        android:text="tick the box if this activity is done"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/updatebuttonadd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateeditTextdescription"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/updatebuttonadd"
        android:layout_width="181dp"
        android:layout_height="46dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="86dp"
        android:layout_marginEnd="184dp"
        android:layout_marginBottom="324dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextdescription"
        app:layout_constraintVertical_bias="0.45" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="282dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="129dp"
        android:layout_marginBottom="251dp"
        android:fontFamily="cursive"
        android:text="@string/want_to_check_your_status"
        android:textAlignment="textStart"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updatebuttonadd"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/status_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="245dp"
        android:layout_marginBottom="170dp"
        android:text="@string/status"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
         />

    <CheckBox
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="262dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="421dp"
        android:text="@string/done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/status_text"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/done_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="131dp"
        android:text="this acitvity have been done"
        android:textSize="24sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/status_text"
        app:layout_constraintEnd_toStartOf="@+id/status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateeditTextdescription" />

    <TextView
        android:id="@+id/dateupdate"
        android:layout_width="128dp"
        android:layout_height="36dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="60dp"
        android:clickable="true"
        android:onClick="onClick"
        android:text="Date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/status_button"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="OnClick" />


</androidx.constraintlayout.widget.ConstraintLayout>